# iars

./: Cargo.toml  README.md
src/: authorization.rs  authorize.rs  consent.rs  main.rs  metadata.rs  utils.rs
templates/: authorization.html
