[package]
name = "iars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
askama = "0.11.1"
serde = "1.0.137"
rand = "0.8.5"
sha2 = "0.10.2"
base64 = "0.13.0"
toml = "0.5"
serde_json = "1.0.81"
url = "2.2.2"
reqwest = { version = "0.11.10", features=["rustls-tls"], default-features = false }
tokio = "1.18.2"
